<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_delete_photo_details"
        android:icon="@drawable/ic_baseline_delete_24"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom"
        android:title="@string/photo_details_delete"/>
    <item android:id="@+id/action_rotate_photo_details"
        android:icon="@drawable/ic_baseline_rotate_right_24"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom"
        android:title="@string/photo_details_rotate"/>
    <item android:id="@+id/action_save_photo_details"
        android:icon="@drawable/ic_baseline_check_24"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom"
        android:title="@string/photo_details_save"/>
</menu>